BackEnd/k8s-deployment/backend-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-auth
spec:
  selector:
    app: backend-auth
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-auth
  template:
    metadata:
      labels:
        app: backend-auth
    spec:
      containers:
        - name: backend-auth
          image: catarena/backend_auth:latest
          ports:
            - containerPort: 3001
