BackEnd/k8s-deployment/backend-notify.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-notify
spec:
  type: LoadBalancer  # <--- Thêm dòng này
  selector:
    app: backend-notify
  ports:
    - port: 6001
      targetPort: 6001
      name: tcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-notify
  template:
    metadata:
      labels:
        app: backend-notify
    spec:
      containers:
        - name: backend-notify
          image: catarena/backend_notify:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
