BackEnd/k8s-deployment/backend-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-user
spec:
  selector:
    app: backend-user
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-user
  template:
    metadata:
      labels:
        app: backend-user
    spec:
      containers:
        - name: backend-user
          image: catarena/backend_user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
