BackEnd/k8s-deployment/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: LoadBalancer # Dùng NodePort để test local hoặc LoadBalancer nếu chạy cloud
  selector:
    app: api-gateway
  ports:
    - port: 80         # <--- Đổi thành 80 cho chuẩn web (người dùng không cần gõ :3000)
      targetPort: 3000 # Container vẫn chạy port 3000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: catarena/gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
