BackEnd/k8s-deployment/gatewayAdmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gatewayadmin
spec:
  type: LoadBalancer
  selector:
    app: api-gatewayadmin
  ports:
    - port: 80
      targetPort: 9000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gatewayadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gatewayadmin
  template:
    metadata:
      labels:
        app: api-gatewayadmin
    spec:
      containers:
        - name: api-gatewayadmin
          image: catarena/gatewayadmin:latest
          ports:
            - containerPort: 9000
