BackEnd/k8s-deployment/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq # Tên này sẽ là hostname để các backend kết nối (vd: amqp://user:password@rabbitmq:5672)
spec:
  ports:
    - port: 5672
      name: amqp
      targetPort: 5672
    - port: 15672
      name: management
      targetPort: 15672
      nodePort: 30080 # (Tùy chọn) Để truy cập dashboard từ bên ngoài
  selector:
    app: rabbitmq
  type: NodePort # Hoặc ClusterIP nếu không cần truy cập dashboard từ ngoài

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
